[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Cards/GameplayCard.gd" type="Script" id=1]
[ext_resource path="res://UI/Cards/GameplayCardFrame.tres" type="StyleBox" id=2]
[ext_resource path="res://Fonts/Styles/Cards/Name.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/Cards/PowerFrame.tres" type="StyleBox" id=5]
[ext_resource path="res://UI/Cards/ManaFrame.tres" type="StyleBox" id=6]
[ext_resource path="res://Prefabs/Cards/StatLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Cards/StatLabel.gd" type="Script" id=8]
[ext_resource path="res://Prefabs/Cards/Animations.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

[node name="GameplayCard" type="Node2D"]
script = ExtResource( 1 )

[node name="MoveButton" type="TouchScreenButton" parent="."]
position = Vector2( -100, -150 )
scale = Vector2( 10, 15 )
shape = SubResource( 1 )

[node name="Animations" parent="." instance=ExtResource( 9 )]

[node name="Frame" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -150.0
margin_right = 100.0
margin_bottom = 150.0
custom_styles/panel = ExtResource( 2 )

[node name="Artwork" type="Sprite" parent="."]

[node name="Cost" type="Panel" parent="."]
margin_left = -115.0
margin_top = -180.0
margin_right = -25.0
margin_bottom = -90.0
custom_styles/panel = ExtResource( 6 )

[node name="Label" parent="Cost" instance=ExtResource( 7 )]
margin_top = -44.0
margin_bottom = 46.0
custom_colors/font_outline_modulate = Color( 0, 0.270588, 0.356863, 1 )

[node name="Power" type="Panel" parent="."]
margin_left = 25.0
margin_top = -180.0
margin_right = 115.0
margin_bottom = -90.0
custom_styles/panel = ExtResource( 5 )

[node name="Label" parent="Power" instance=ExtResource( 7 )]
margin_top = -44.0
margin_bottom = 46.0
custom_colors/font_outline_modulate = Color( 0.396078, 0.247059, 0.0196078, 1 )

[node name="Name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = 35.0
margin_right = 115.0
margin_bottom = 152.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.807843 )
custom_fonts/font = ExtResource( 4 )
text = "Name"
align = 1
valign = 1
autowrap = true
script = ExtResource( 8 )

[node name="Timers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LongClick" type="Timer" parent="Timers"]
wait_time = 0.58

[node name="QuickClick" type="Timer" parent="Timers"]
wait_time = 0.36

[node name="QuickClickCooldown" type="Timer" parent="Timers"]
wait_time = 0.32

[node name="VariantLoad" type="Timer" parent="Timers"]
wait_time = 0.5

[connection signal="pressed" from="MoveButton" to="." method="_on_MoveButton_pressed"]
[connection signal="released" from="MoveButton" to="." method="_on_MoveButton_released"]
[connection signal="timeout" from="Timers/LongClick" to="." method="_on_LongClick_timeout"]
[connection signal="timeout" from="Timers/QuickClick" to="." method="_on_OnClickTimer_timeout"]
[connection signal="timeout" from="Timers/QuickClickCooldown" to="." method="_on_QuickClickCooldown_timeout"]
[connection signal="timeout" from="Timers/VariantLoad" to="." method="_on_VariantLoad_timeout"]
